assign serial functionality

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "material-kit-react",
+  "name": "fastpayment-tranred-sales-app",
   "version": "3.0.0",
-  "author": "Devias",
+  "author": "Devias - adapted for fastpayment by L.A.B.",
   "licence": "MIT",
   "homepage": "https://devias.io",
   "private": false,
