--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "18.2.0",
     "simplebar-react": "^3.2.1",
     "yup": "1.0.0"
